logs/Slang/generated/yosys/sva_basic01.sv.log
name: sva_basic01
description: Tests imported from yosys
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/sva/basic01.sv
should_fail: 0
tags: yosys
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/sva/basic01.sv:10:2: error: language feature not yet supported
	a_rw: assert property ( @(posedge clock) !(read && write) );
	^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/sva/basic01.sv:14:2: error: language feature not yet supported
	a_wr: assert property ( @(posedge clock) write |=> ready );
	^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
